--- a/amm-anchor/Cargo.toml
+++ b/amm-anchor/Cargo.toml
@@ -11,4 +11,4 @@ keywords = ["solana", "raydium", "amm", "anchor"]
 anchor-lang = "0.29.0"
 solana-program = "1.17.14"
 spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
-raydium-contract-instructions = { path = "../lib"}
+raydium-contract-instructions = { registry = "kellnr", version = "0.2.0"}
