--- a/amm-anchor/Cargo.toml
+++ b/amm-anchor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "amm-anchor"
-version = "0.2.0"
+version = "0.2.2"
 description = "Anchor bindings for the AMM native instruction."
 homepage = "https://raydium.io/"
 repository = "https://github.com/raydium-io/raydium-contract-instructions"
@@ -8,7 +8,8 @@ edition = "2021"
 keywords = ["solana", "raydium", "amm", "anchor"]
 
 [dependencies]
-anchor-lang = "0.29.0"
-solana-program = "1.17.14"
-spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
-raydium-contract-instructions = { registry = "kellnr", version = "0.2.0"}
+anchor-lang = "=0.29.0"
+solana-program = "=1.17.31"
+spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
+spl-memo = "=4.0.0"
+raydium-contract-instructions = { registry = "kellnr", version = "0.2.2"}
