--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "raydium-contract-instructions"
-version = "0.2.0"
+version = "0.2.2"
 edition = "2021"
 
 
 [dependencies]
-solana-program = "1.17.14"
-spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
+solana-program = "=1.17.31"
+spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
 spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"]}
 num-derive = "0.3"
 num-traits = "0.2.12"
 thiserror = "1.0.20"
+spl-memo = { version="=4.0.0" }
