--- a/staking-anchor/Cargo.toml
+++ b/staking-anchor/Cargo.toml
@@ -18,5 +18,5 @@ cpi = ["no-entrypoint"]
 [dependencies]
 anchor-lang = "0.29.0"
 solana-program = "1.17.14"
-spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
+spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
 raydium-contract-instructions = { path = "../lib"}
